Upgrade to Java 17 (#162)